--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,23 @@
 asgiref==3.8.1
+Brotli==1.1.0
+cffi==1.17.1
+cssselect2==0.7.0
 Django==5.1
 django-crispy-forms==2.3
+fonttools==4.53.1
+html5lib==1.1
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+pdfkit==1.0.0
 pillow==10.4.0
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.16.0
 python-dotenv==1.0.1
 pytube==15.0.0
+six==1.16.0
 sqlparse==0.5.1
+tinycss2==1.3.0
+weasyprint==62.3
+webencodings==0.5.1
+zopfli==0.2.3
